<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/button_save"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <EditText
            android:id="@+id/editText_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:textAllCaps="true"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editText_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/context"
            android:inputType="textMultiLine"
            android:lines="6"
            android:textAllCaps="true"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editText_reflection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/reflection"
            android:inputType="textMultiLine"
            android:lines="6"
            android:textAllCaps="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView_emotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/emotion"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            android:entries="@array/emotion_list"
            android:longClickable="false"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="8dp" />
</androidx.constraintlayout.widget.ConstraintLayout>